force-app/main/default/objects/Case/fields/Credit_limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_limit__c</fullName>
    <formula>Account.CreditLimit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>