force-app/main/default/objects/Case/fields/Other_Deal__c.field-meta.xml
<CustomField>
    <fullName>Other_Deal__c</fullName>
    <label>Other Deal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>