force-app/main/default/objects/Case/fields/Sales_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sales_Owner__c</fullName>
    <label>Sales Owner</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>