force-app/main/default/objects/Case/fields/Sales_Request__c.field-meta.xml
<CustomField>
    <fullName>Sales_Request__c</fullName>
    <label>Sales Request</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>