force-app/main/default/objects/Case/fields/Sales_Request_s_Role__c.field-meta.xml
<CustomField>
    <fullName>Sales_Request_s_Role__c</fullName>
    <formula>Owner:User.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Request&apos;s Role</label>
    <type>Text</type>
</CustomField>