force-app/main/default/objects/Case/fields/Shipment_Term__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Term__c</fullName>
    <label>Shipment Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>