force-app/main/default/objects/Case/fields/Shipment_Term_c__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Term_c__c</fullName>
    <label>Shipment Term.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Shipment_Term</valueSetName>
    </valueSet>
</CustomField>