force-app/main/default/objects/Case/fields/Tranportation_Way__c.field-meta.xml
<CustomField>
    <fullName>Tranportation_Way__c</fullName>
    <label>Tranportation Way</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Transportation_Way</valueSetName>
    </valueSet>
</CustomField>