force-app/main/default/objects/Case/fields/Type_of_Trade__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Trade__c</fullName>
    <label>Type of Trade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Trade</valueSetName>
    </valueSet>
</CustomField>