force-app/main/default/objects/Case/fields/Volumn_Teus__c.field-meta.xml
<CustomField>
    <fullName>Volumn_Teus__c</fullName>
    <label>Volumn Teus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>