force-app/main/default/objects/Case/recordTypes/Case_Sales.recordType-meta.xml
<RecordType>
    <fullName>Case_Sales</fullName>
    <active>true</active>
    <businessProcess>ForCaseForSale</businessProcess>
    <label>Case Sales</label>
</RecordType>