force-app/main/default/objects/Case/recordTypes/Join_Sales.recordType-meta.xml
<RecordType>
    <fullName>Join_Sales</fullName>
    <active>true</active>
    <businessProcess>ForCaseForSale</businessProcess>
    <label>Join Sales</label>
</RecordType>